# npuw.model_generator.demo

./: .gitignore  README.md  build.sh  download_models.sh  requirements.txt  setup_venv.bat  setup_venv.sh  test_model_builder.sh  test_whisper_models_npu.sh
configs/: config.json  hfa.json  hfa_llama.json  moe.json  npuw.json  npuw_llama.json  npuw_qwen.json  pyramid.json  pyramid_llama.json  synth_embed.json  synth_whisper.json  whisper.json
src/: CMakeLists.txt  demo_model_generator.cpp
tools/: whisper_genai.py
